--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>mavros</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -64,6 +65,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>mavros</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
